[package]
name = "todo-by"
version = "0.1.0"
edition = "2021"
description = "Flag todo-by tags whose deadline date has passed, across any file type"
license = "MIT"
repository = "https://github.com/alies-dev/todo-by"
readme = "README.md"
keywords = ["todo", "deadline", "linter", "ci", "comments"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "todo-by"
path = "src/main.rs"

[dependencies]
# ripgrep's walker: full gitignore semantics + parallel directory traversal.
ignore = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
