[package]
name = "todo-by-cli"
version = "0.2.1"
edition = "2021"
# Floor set by lockfile-v4 deps that need edition2024 (stabilized in 1.85);
# enforced by the msrv job in CI. Keep in sync with ci.yml and clippy.toml.
rust-version = "1.85"
description = "Flag todo-by tags whose deadline date has passed, across any file type"
license = "MIT"
repository = "https://github.com/alies-dev/todo-by"
readme = "README.md"
# Whitelist the packaged files so local scratch dirs can never leak into
# a published crate.
include = ["/src/**", "/Cargo.toml", "/README.md", "/LICENSE"]
keywords = ["todo", "deadline", "linter", "ci", "comments"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "todo-by"
path = "src/main.rs"

[dependencies]
# ripgrep's walker: full gitignore semantics + parallel directory traversal.
ignore = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
